[package]
name = "gmsol-sdk"
documentation = "https://docs.rs/gmsol-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["market-graph"]
treasury = ["gmsol-programs/treasury"]
js = [
    "market-graph",
    "wasm-bindgen",
    "serde",
    "serde-wasm-bindgen",
    "gmsol-programs/wasm-bindgen",
    "tsify-next/wasm-bindgen",
    "gmsol-model/js",
    "bincode",
]
serde = [
    "dep:serde",
    "gmsol-model/serde",
    "serde_with",
    "gmsol-solana-utils/serde",
]
market-graph = ["petgraph", "rust_decimal/maths"]

[dependencies]
gmsol-programs = { workspace = true, features = ["model"] }
gmsol-model = { workspace = true, features = ["u128"] }
gmsol-solana-utils = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
solana-sdk = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "associated_token",
] }
either = { workspace = true }
rust_decimal = { workspace = true, default_features = false }
typed-builder = { workspace = true }
rand = { workspace = true }

tracing = { workspace = true, optional = true }

# Dependencies for the `js` feature
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true, features = ["js"] }
bincode = { workspace = true, optional = true }

# Dependencies for the `serde` feature
serde = { workspace = true, optional = true, features = ["derive"] }
serde_with = { workspace = true, optional = true }

# Dependencies for the `market-graph` feature
petgraph = { workspace = true, optional = true, default-features = false, features = [
    "stable_graph",
] }

[build-dependencies]
cfg_aliases = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasm-bindgen-test = { workspace = true }
serde_json = { workspace = true }
