[package]
name = "gmsol-sdk"
documentation = "https://docs.rs/gmsol-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["market-graph"]
treasury = ["gmsol-programs/treasury"]
timelock = ["gmsol-programs/timelock"]
js = [
    "market-graph",
    "wasm-bindgen",
    "serde",
    "serde-wasm-bindgen",
    "gmsol-programs/wasm-bindgen",
    "tsify-next/wasm-bindgen",
    "gmsol-model/js",
    "bincode",
]
serde = [
    "dep:serde",
    "gmsol-model/serde",
    "serde_with",
    "gmsol-solana-utils/serde",
]
market-graph = ["petgraph", "rust_decimal/maths"]
client = [
    "gmsol-programs/gmsol-utils",
    "gmsol-programs/treasury",
    "gmsol-programs/timelock",
    "gmsol-solana-utils/make-bundle-builder",
    "gmsol-solana-utils/anchor",
    "gmsol-utils/debug",
    "gmsol-utils/display",
    "gmsol-utils/instruction",
    "gmsol-model/strum",
    "treasury",
    "timelock",
    "tracing",
    "serde",
    "serde_json",
    "futures-util",
    "tokio",
    "tokio-stream",
    "solana-client",
    "solana-account-decoder",
    "solana-transaction-status",
    "hex",
    "async-stream",
    "bytes",
    "time",
]
decode = ["gmsol-decode"]
chainlink = ["gmsol-chainlink-datastreams"]

[dependencies]
gmsol-programs = { workspace = true, features = ["model"] }
gmsol-model = { workspace = true, features = ["u128"] }
gmsol-solana-utils = { workspace = true }
gmsol-utils = { workspace = true }
gmsol-decode = { workspace = true, optional = true, features = [
    "gmsol-programs",
    "solana-decoder",
] }
thiserror = { workspace = true }
base64 = { workspace = true }
solana-sdk = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "associated_token",
] }
either = { workspace = true }
rust_decimal = { workspace = true, default_features = false }
typed-builder = { workspace = true }
rand = { workspace = true }

tracing = { workspace = true, optional = true }

# Dependencies for the `js` feature
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true, features = ["js"] }
bincode = { workspace = true, optional = true }

# Dependencies for the `serde` feature
serde = { workspace = true, optional = true, features = ["derive"] }
serde_with = { workspace = true, optional = true }

# Dependencies for the `market-graph` feature
petgraph = { workspace = true, optional = true, default-features = false, features = [
    "stable_graph",
] }

# Dependencies for the `client` feature
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tokio-stream = { workspace = true, optional = true, features = ["sync"] }
solana-client = { workspace = true, optional = true }
solana-account-decoder = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
time = { workspace = true, optional = true }

# Dependencies for `chainlink` feature
gmsol-chainlink-datastreams = { workspace = true, optional = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasm-bindgen-test = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
