[package]
name = "gmsol-solana-utils"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-solana-utils"
readme.workspace = true
keywords.workspace = true

[features]
serde = ["dep:serde"]
anchor = ["dep:anchor-lang", "dep:anchor-client"]

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
dyn-clone = { workspace = true }
serde_json = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive"] }
anchor-lang = { workspace = true, optional = true }
anchor-client = { workspace = true, optional = true }
