[package]
name = "gmsol-callback"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-callback"
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_callback"

[features]
doc = ["interface"]
interface = ["cpi", "types"]
types = ["num_enum", "no-entrypoint"]

default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = ["anchor-lang/anchor-debug"]
debug-msg = []
idl-build = ["anchor-lang/idl-build"]
mock = []
multi-store = []
devnet = []
test-only = []
migration = []
debug = []
display = ["strum"]
serde = ["dep:serde"]
no-competition = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
num_enum = { workspace = true, optional = true }
strum = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
