[package]
name = "data_store"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_store"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
debug = []

[dependencies]
anchor-lang = { workspace = true }
gmx-core = { path = "../../crates/gmx-core" }
gmx-solana-utils = { path = "../../crates/gmx-solana-utils" }
dual-vec-map = { path = "../../crates/dual-vec-map" }
anchor-spl = { workspace = true, default_features = false, features = [
    "token",
    "token_2022",
] }
bitmaps = "3.2.1"
