[package]
name = "data_store"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_store"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
debug = []

[dependencies]
bytemuck = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
gmx-core = { path = "../../crates/gmx-core", features = ["u128", "solana"] }
gmx-solana-utils = { path = "../../crates/gmx-solana-utils" }
dual-vec-map = { path = "../../crates/dual-vec-map" }
anchor-spl = { workspace = true, default_features = false, features = [
    "token",
    "token_2022",
    "token_2022_extensions",
] }
bitmaps = "3.2.1"
chainlink_solana = "1.0.0"
num_enum = "0.7.2"
static_assertions = "1.1.0"

# FIXME: use the crates.io version when it can compile with anchor v0.30
[dependencies.pyth-solana-receiver-sdk]
version = "0.2.0"
git = "https://github.com/pyth-network/pyth-crosschain"
rev = "308599714ff07aa6bbb31c36d79e8095bfc98c74"
