[package]
name = "data_store"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_store"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
debug = []
display = []
utils = []
devnet = []
serde = ["dep:serde"]
enum-iter = []

[dependencies]
bytemuck = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
gmx-core = { path = "../../crates/gmx-core", features = ["u128", "solana"] }
gmx-solana-utils = { path = "../../crates/gmx-solana-utils" }
dual-vec-map = { path = "../../crates/dual-vec-map" }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "token_2022_extensions",
] }
bitmaps = "3.2.1"
chainlink_solana = "1.0.0"
num_enum = "0.7.2"
static_assertions = "1.1.0"
clap = { workspace = true, optional = true }
pyth-sdk-solana = "0.10.1"
pyth-solana-receiver-sdk = { workspace = true }
paste = "1.0.15"
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"], optional = true }
