[package]
name = "exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "data_store/idl-build",
    "anchor-spl/idl-build",
]
debug = ["data_store/debug"]
devnet = ["data_store/devnet"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, default_features = false, features = [
    "token",
    "token_2022",
] }
gmx-core = { path = "../../crates/gmx-core", features = ["u128", "solana"] }
data_store = { path = "../data_store", features = ["cpi"] }
