[package]
name = "gmsol-store"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_store"

[features]
docs = ["cpi", "debug", "display", "utils", "serde", "enum-iter"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
debug = []
display = []
utils = ["bytes"]
devnet = []
serde = ["dep:serde", "serde_with"]
enum-iter = []
no-bug-fix = []

[dependencies]
bytemuck = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
gmsol-model = { workspace = true, features = ["u128", "solana", "strum"] }
gmsol-utils = { workspace = true }
dual-vec-map = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "token_2022_extensions",
] }
bitmaps = { workspace = true }
chainlink_solana = { workspace = true }
num_enum = { workspace = true }
static_assertions = { workspace = true }
clap = { workspace = true, optional = true }
pyth-sdk-solana = { workspace = true }
pyth-solana-receiver-sdk = { workspace = true }
paste = { workspace = true }
strum = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
indexmap = { workspace = true }
bytes = { workspace = true, optional = true }
