[package]
name = "gmsol-timelock"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_timelock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
debug-msg = []
idl-build = ["anchor-lang/idl-build", "gmsol-store/idl-build"]
debug = ["gmsol-store/debug"]
no-mock = []
multi-store = ["gmsol-store/multi-store"]
utils = ["bytes", "gmsol-store/utils"]
devnet = ["gmsol-store/devnet"]

[dependencies]
anchor-lang = { workspace = true }
gmsol-store = { workspace = true, features = ["cpi"] }
gmsol-utils = { workspace = true }
bytemuck = { workspace = true }
num_enum = { workspace = true }

bytes = { workspace = true, optional = true }
