[package]
name = "gmsol-treasury"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_treasury"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
debug-msg = []
idl-build = [
    "anchor-lang/idl-build",
    "gmsol-store/idl-build",
    "gmsol-utils/idl-build",
]
debug = ["gmsol-store/debug"]
no-mock = []
multi-store = ["gmsol-store/multi-store"]
enum-iter = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "token_2022_extensions",
    "associated_token",
] }
bytemuck = { workspace = true }
gmsol-utils = { workspace = true }
gmsol-store = { workspace = true, features = ["cpi"] }
num_enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }
