[package]
name = "gmsol-treasury"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-treasury"
readme.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_treasury"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = ["anchor-lang/anchor-debug", "gmsol-store/anchor-debug"]
debug-msg = []
idl-build = [
    "anchor-lang/idl-build",
    "gmsol-store/idl-build",
    "gmsol-utils/idl-build",
]
debug = ["gmsol-store/debug", "derive_more"]
mock = []
multi-store = ["gmsol-store/multi-store"]
enum-iter = []
utils = []
devnet = ["gmsol-store/devnet"]
test-only = ["gmsol-store/test-only"]
migration = ["gmsol-store/migration"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, default-features = false, features = [
    "token",
    "token_2022",
    "token_2022_extensions",
    "associated_token",
] }
bytemuck = { workspace = true }
gmsol-utils = { workspace = true }
gmsol-store = { workspace = true, features = ["cpi"] }
gmsol-model = { workspace = true, features = ["u128"] }
num_enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
