[package]
name = "gmsol-liquidity-provider"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_liquidity_provider"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = ["anchor-lang/anchor-debug"]
debug-msg = []
idl-build = ["anchor-lang/idl-build"]
mock = []
multi-store = []
devnet = []
test-only = []
migration = []

[dependencies]
anchor-lang = "0.31.1"

