[package]
name = "market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "data_store/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { workspace = true }
data_store = { path = "../data_store", features = ["cpi"] }
anchor-spl = { workspace = true, default_features = false, features = [
    "token",
    "token_2022",
] }
