[package]
name = "mock-chainlink-verifier"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_chainlink_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
debug-msg = []
idl-build = ["anchor-lang/idl-build"]
multi-store = []

[dependencies]
anchor-lang = { workspace = true }
