[package]
name = "gmsol-mock-chainlink-verifier"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-mock-chainlink-verifier"
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_mock_chainlink_verifier"

[features]
doc = ["cpi"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = ["anchor-lang/anchor-debug"]
debug-msg = []
idl-build = ["anchor-lang/idl-build"]
mock = []
multi-store = []
devnet = []
test-only = []
migration = []

[dependencies]
anchor-lang = { workspace = true }
chainlink-data-streams-report = { workspace = true }
snap = { workspace = true }
cfg-if = { workspace = true }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
