[package]
name = "gmsol-timelock"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmsol-timelock"
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gmsol_timelock"

[features]
doc = ["cpi", "debug", "utils"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = ["anchor-lang/anchor-debug", "gmsol-store/anchor-debug"]
debug-msg = []
idl-build = ["anchor-lang/idl-build", "gmsol-store/idl-build"]
debug = ["gmsol-store/debug", "gmsol-utils/debug"]
mock = []
multi-store = ["gmsol-store/multi-store"]
utils = ["bytes", "gmsol-store/utils"]
devnet = ["gmsol-store/devnet", "gmsol-utils/devnet"]
test-only = ["gmsol-store/test-only"]
migration = ["gmsol-store/migration"]
serde = ["dep:serde", "gmsol-store/serde", "gmsol-utils/serde"]

[dependencies]
anchor-lang = { workspace = true }
gmsol-store = { workspace = true, features = ["cpi"] }
gmsol-utils = { workspace = true, features = ["instruction", "security-txt"] }
bytemuck = { workspace = true }
num_enum = { workspace = true }

bytes = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
